Fixed z-index issues, cleaned up z-index code

--- a/bin/styles/less/include/game-components.less
+++ b/bin/styles/less/include/game-components.less
@@ -114,7 +114,7 @@
 			position: absolute;
 			right: 4px;
 			bottom: 4px;
-			z-index: 50;
+			z-index: @zIndex-item-charges;
 		}
 	}
 
@@ -129,7 +129,7 @@
 		    color: #F66;
 		    font-weight: 800;
 		    font-size: 100%;
-		    z-index: 60;
+		    z-index: @zIndex-item-text;
 		    -webkit-text-stroke: 1px red;
 		    text-stroke: 1px red;
 
@@ -149,7 +149,7 @@
 		    height: 100%;
 		    width: 100%;
 			background: url('@{img-path}anim/hit.png');
-			z-index: 80;
+			z-index: @zIndex-weapon-hit;
 			opacity: 0;
 		}
 		.weapon-miss {
@@ -163,7 +163,7 @@
 		    height: 100%;
 		    width: 100%;
 			background: url('@{img-path}anim/miss.png');
-			z-index: 80;
+			z-index: @zIndex-weapon-hit;
 			opacity: 0;
 		}
 	}
