--- a/bin/styles/less/include/map.less
+++ b/bin/styles/less/include/map.less
@@ -24,13 +24,13 @@
 			&.start::before {
 				content: 'START!';
 				position: absolute;
-				z-index: 65;
+				z-index: 65; // TODO: just temporary
 			}
 
 			&.finish::before {
 				content: 'FINISH!';
 				position: absolute;
-				z-index: 65;
+				z-index: 65; // TODO: just temporary
 			}
 
 			&.revealed {
@@ -51,7 +51,7 @@
 			.room-type {
 				position: absolute;
 				bottom: 5px;
-			    z-index: 60;
+			    z-index: 60; // TODO: just temporary
 			}
 
 			.items {
@@ -60,7 +60,7 @@
 				width: 13px;
 				height: 13px;
 				background: url('@{img-path}rooms/icons/items.png'); 
-				z-index: 60;
+				z-index: @zIndex-room-icon;
 			}
 
 			.animation {
@@ -72,7 +72,7 @@
 			    top: (@map-tile-size - @animation-size) / 2;
 			    left: (@map-tile-size - @animation-size) / 2;
 
-			    z-index: 80;
+			    z-index: @zIndex-room-animation;
 
 				&.explosion {
 					@frames: 30;
@@ -156,7 +156,7 @@
 				    bottom: 0;
 				    left: 0;
 				    right: 0;
-				    z-index: 100;
+				    z-index: @zIndex-room-light;
 				    // box-shadow: 0 0 90px 0px black inset;
 				    background: rgba(0,0,0,0.94);
 				}
@@ -168,14 +168,14 @@
 				    bottom: 0;
 				    left: 0;
 				    right: 0;
-				    z-index: 100;
+				    z-index: @zIndex-room-light;
 				    // box-shadow: 0 0 90px 0px black inset;
 				    transition: background 0.3s cubic-bezier(0, 2.35, 0,-0.52); //cubic-bezier(0.17, 1.79, 0,-1.35)
 				    background: rgba(0,0,0,0);
 				}
 
 				.wall.has-wall {
-					z-index: 50;
+					z-index: @zIndex-room-wall;
 
 					.door {
 						display: none;
@@ -354,11 +354,10 @@
 	}
 
 	.enemies-panel {
-	    z-index: 60;
 
 		.enemy {
 			visibility: hidden;
-			z-index: 75;
+			z-index: @zIndex-room-enemies;
 			position: absolute;
 
 			.enemyCount {
