--- a/bin/styles/less/include/tutorial.less
+++ b/bin/styles/less/include/tutorial.less
@@ -6,27 +6,26 @@
 	bottom: 0;
 	background: black;
 	opacity: 0;
-	z-index: 10000;
+	z-index: @zIndex-tutorial-overlay;
     transition: opacity 0.4s;
     display: none;
 }
 
 .tutorial-highlight {
 	background-color: white;
-    z-index: 10010;
+    z-index: @zIndex-tutorial-highlight;
     position: fixed;
     border-radius: 400px;
 }
 
 .tutorial-text {
-	z-index: 10010;
 	position: absolute;
 	bottom: 10px;
 	width: 100%;
 	text-align: center;
 	font-size: 150%;
 	color: white;
-	z-index: 10010;
+	z-index: @zIndex-tutorial-text;
     text-shadow: 0 0 9px black, 0 0 9px black, 0 0 9px black, 0 0 9px black;
 
     &.top {
